updated according to the result of pilot study

--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,9 @@ table, th, td {
   border-collapse: collapse;
 }
 
-th {
+th, td {
   font-weight: lighter;
+  border: 3px solid black;
 }
 
 .example-svg{
